# pwpharmaup

./: .env.example  .gitignore  CLAIMS_MATRIX.md  README.md  RESEARCH_EVIDENCE_LOG.md  SCIENTIFIC_METHOD_LOG.md  docker-compose.yml  telemetry-id
backend/: .dockerignore  .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt
backend/data/calibration/: validation.sample.jsonl
backend/data/clinical/: clinical_ann_evidence.tsv  clinical_ann_history.tsv  clinical_annotations.tsv
backend/models/: constants.py  schemas.py
backend/pipeline/: confidence_calibrator.py  explanation_quality.py  llm_explainer.py  pharmgkb_lookup.py  phenoconversion_detector.py  pypgx_engine.py  risk_engine.py  rules_loader.py  variant_extractor.py  vcf_parser.py
backend/scripts/: evaluate_confidence_calibration.py
backend/tests/: test_api_analyze.py  test_core_pipeline.py  test_llm_explainer.py  test_snapshot_conformance.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ClinicalOpsPanel.jsx  ConfidenceEvidencePanel.jsx  DrugInput.jsx  FileUpload.jsx  JsonViewer.jsx  RiskCard.jsx  VariantTable.jsx
sample_vcf/: patient_dpyd_im.vcf  patient_im_cyp2c9.vcf  patient_im_slco1b1.vcf  patient_normal_all.vcf  patient_pm_cyp2c19.vcf  patient_pm_cyp2d6.vcf  patient_pm_dpyd.vcf  patient_rm_cyp2c19.vcf
