[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "dnspython>=2.8.0",
    "fastapi[standard]>=0.129.0",
    "google-auth>=2.48.0",
    "google-cloud-aiplatform>=1.138.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.4.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
]
